Fixed textarea overflow issue

--- a/dev/assets/css/modules/_message-box.css
+++ b/dev/assets/css/modules/_message-box.css
@@ -153,3 +153,7 @@
     background: transparent;
   }
 }
+
+textarea {
+  overflow: hidden;
+}
